--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Dashboard de Salarios</h1>
     <p>Este es un dashboard interactivo desarrollado en <b>Looker Studio</b>.</p>
-    <p><a href="https://lookerstudio.google.com/reporting/ee3a039b-b282-420c-8ba7-a242462d64ae" target="_blank">        
-    </a></p>
+
+    <iframe width="800" height="600"
+        src="https://lookerstudio.google.com/embed/reporting/ee3a039b-b282-420c-8ba7-a242462d64ae/page/1M"
+        frameborder="0" style="border:0" allowfullscreen>
+    </iframe>
 </body>
 </html>
