--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <h1>Dashboard de Salarios</h1>
     <p>Este es un dashboard interactivo desarrollado en <b>Looker Studio</b>.</p>
 
-    <iframe width="800" height="600"
-        src="https://lookerstudio.google.com/embed/reporting/ee3a039b-b282-420c-8ba7-a242462d64ae/page/1M"
-        frameborder="0" style="border:0" allowfullscreen>
-    </iframe>
+    <iframe width="600" height="450" src="https://lookerstudio.google.com/embed/reporting/ee3a039b-b282-420c-8ba7-a242462d64ae/page/aXvmE" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+    
 </body>
 </html>
