--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 <body>
 
     <div class="container">
-        <h1>Dashboard de Salarios</h1>
-        <p>Este es un dashboard interactivo desarrollado en <b>Looker Studio</b>.</p>
+        <h1>INFORME SALARIOS “ASK A MANAGER” 2021</h1>    
     </div>
 
     <div class="dashboard-container">
