--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
             border-radius: 10px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
+
+        .doc-link {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            color: #fff;
+            background-color: #007bff;
+            text-decoration: none;
+            border-radius: 5px;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        .doc-link:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -56,6 +72,10 @@
                 sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms">
         </iframe>
     </div>
+
+    <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Informe-salarios/main/Taller%20salarios.pdf" target="_blank">
+        📄 Ver documentación en PDF
+    </a>
 
 </body>
 </html>
