--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 90vh;
+            height: 80vh;
         }
 
         iframe {
             width: 90%;
-            height: 80vh;
+            height: 70vh;
             border: 2px solid #ccc;
             border-radius: 10px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -46,13 +46,15 @@
         .doc-link {
             display: inline-block;
             margin-top: 20px;
-            padding: 10px 20px;
+            padding: 12px 24px;
             font-size: 18px;
+            font-weight: bold;
             color: #fff;
             background-color: #007bff;
             text-decoration: none;
             border-radius: 5px;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s ease;
         }
 
         .doc-link:hover {
@@ -73,7 +75,8 @@
         </iframe>
     </div>
 
-    <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Informe-salarios/main/Taller%20salarios.pdf" target="_blank">        
+    <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Informe-salarios/main/Taller%20salarios.pdf" target="_blank">
+        📄 Ver documentación en PDF
     </a>
 
 </body>
