--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 80vh;
+            height: 90vh;
         }
 
         iframe {
             width: 90%;
-            height: 70vh;
+            height: 80vh;
             border: 2px solid #ccc;
             border-radius: 10px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -46,19 +46,29 @@
         .doc-link {
             display: inline-block;
             margin-top: 20px;
-            padding: 12px 24px;
+            padding: 10px 20px;
             font-size: 18px;
-            font-weight: bold;
             color: #fff;
             background-color: #007bff;
             text-decoration: none;
             border-radius: 5px;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-            transition: background-color 0.3s ease;
         }
 
         .doc-link:hover {
             background-color: #0056b3;
+        }
+
+        .pdf-container {
+            margin-top: 40px;
+        }
+
+        .pdf-frame {
+            width: 80%;
+            height: 600px;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
@@ -75,9 +85,15 @@
         </iframe>
     </div>
 
-    <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Informe-salarios/main/Taller%20salarios.pdf" target="_blank">
+    <!-- Botón para abrir el PDF en otra pestaña sin descargar -->
+    <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Informe-salarios/e391f42a14b614455613241342f475f06f9cf936/Taller%20salarios.pdf" target="_blank">
         📄 Ver documentación en PDF
     </a>
+
+    <!-- Contenedor del PDF dentro de la página -->
+    <div class="pdf-container">
+        <iframe class="pdf-frame" src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/hugoruizb/Informe-salarios/e391f42a14b614455613241342f475f06f9cf936/Taller%20salarios.pdf&embedded=true"></iframe>
+    </div>
 
 </body>
 </html>
