--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -43,20 +43,25 @@
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
 
+        /* Botón más grande */
         .doc-link {
             display: inline-block;
             margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 18px;
+            padding: 15px 30px; /* Más espacio interno */
+            font-size: 24px; /* Fuente más grande */
+            font-weight: bold;
             color: #fff;
             background-color: #007bff;
             text-decoration: none;
-            border-radius: 5px;
-            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+            min-width: 250px; /* Ancho mínimo */
+            text-align: center;
         }
 
         .doc-link:hover {
             background-color: #0056b3;
+            box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.3);
         }
 
         .pdf-container {
@@ -85,7 +90,7 @@
         </iframe>
     </div>
 
-    <!-- Botón para abrir el PDF en otra pestaña sin descargar -->
+    <!-- Botón más grande para abrir el PDF en otra pestaña sin descargar -->
     <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Informe-salarios/e391f42a14b614455613241342f475f06f9cf936/Taller%20salarios.pdf" target="_blank">
         📄 Ver documentación en PDF
     </a>
