--- a/index.html
+++ b/index.html
@@ -90,13 +90,11 @@
         </iframe>
     </div>
 
-    <!-- Botón más grande para abrir el PDF en otra pestaña sin descargar -->
     <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Informe-salarios/e391f42a14b614455613241342f475f06f9cf936/Taller%20salarios.pdf" target="_blank">
-        📄 Ver documentación en PDF
+        📄 Descargar documentación en PDF
     </a>
 
-    <!-- Contenedor del PDF dentro de la página -->
-    <div class="pdf-container">
+        <div class="pdf-container">
         <iframe class="pdf-frame" src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/hugoruizb/Informe-salarios/e391f42a14b614455613241342f475f06f9cf936/Taller%20salarios.pdf&embedded=true"></iframe>
     </div>
 
